# exert-opencv

./: .gitignore  .gitmodules  readme.md
qt6demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
